@startuml

title __CONTROLLERS's Class Diagram__\n

    namespace om.fs.springboot {
      namespace controllers {
        class com.fs.springboot.controllers.SpeechTranscriber {
            + SpeechTranscriber()
            + transcribe()
        }
      }
  }
  

    namespace om.fs.springboot {
      namespace controllers {
        class com.fs.springboot.controllers.ToneAnalyzerController {
            + ToneAnalyzerController()
            + getToneOptions()
        }
    }
  }
  

  com.fs.springboot.controllers.SpeechTranscriber o-- com.fs.springboot.services.SpeechTranscriberService : speechTranscriberService
  com.fs.springboot.controllers.ToneAnalyzerController o-- com.fs.springboot.services.ToneAnalyzerService : toneAnalyzerService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
